--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>This is my app</h1>
+	<p>Login form</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet nostrum, cupiditate itaque libero ipsa, eos quam corporis recusandae vel aperiam.</p>
 	<script src="app.js"></script>	
 </body>
